SERVER-38949 Ban index usage for {$ne: <array>} queries